# stocker

./: .editorconfig  .gitattributes  Cargo.toml  README.md
.cargo/: config
src/: app.rs  event.rs  main.rs  reactive.rs  stock.rs  ui.rs  widgets.rs
src/reactive/: mod.rs  stream_ext.rs
src/widgets/: mod.rs  select_menu.rs  text_field.rs
