[package]
name = "stocker"
version = "0.2.0"
authors = ["Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2018"
description = "Stocks dashboard"
readme = "README.md"
repository = "https://github.com/teohhanhui/stocker"
license = "MIT OR Apache-2.0"
keywords = ["finance", "stocks", "dashboard"]
categories = ["command-line-utilities", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
argh = "0.1.3"
async-compat = "0.1.3"
async-std = { version = "1.6.2", features = [ "unstable" ] }
better-panic = "0.2.0"
bimap = "0.4.0"
chrono = "0.4.13"
crossterm = { version = "0.17.6", features = ["event-stream"] }
derivative = "2.1.1"
derive-new = "0.5.8"
derive_more = "0.99.9"
futures = "0.3.5"
gcollections = "1.4.0"
im = "15.0.0"
intervallum = "1.3.0"
itertools = "0.9.0"
itertools-num = "0.1.3"
libmath = "0.2.1"
log = "0.4.8"
once_cell = "1.4.0"
reactive-rs = "0.1.1"
regex = "1.3.9"
shrinkwraprs = "0.3.0"
simplelog = "0.8.0"
smol = "1.2.1"
smol-potat = "1.0.0"
strum = "0.18.0"
strum_macros = "0.18.0"
ta = "0.1.5"
thiserror = "1.0.20"
tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
typenum = "1.12.0"
yahoo-finance = "0.3.0"

[patch.crates-io]
smol-potat = { git = "https://github.com/wusyong/smol-potat" }
