[package]
name = "stocker"
version = "0.2.0"
authors = ["Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2018"
description = "Stocks dashboard"
readme = "README.md"
repository = "https://github.com/teohhanhui/stocker"
license = "MIT OR Apache-2.0"
keywords = ["finance", "stocks", "dashboard"]
categories = ["command-line-utilities", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
argh = "0.1.3"
async-compat = "0.1.5"
async-std = { version = "1.6.5", features = [ "unstable" ] }
better-panic = "0.2.0"
bimap = "0.5.1"
chrono = "0.4.17"
crossterm = { version = "0.17.7", features = ["event-stream"] }
derivative = "2.1.1"
derive-new = "0.5.8"
derive_more = "0.99.11"
futures = "0.3.7"
gcollections = "1.4.0"
im = "15.0.0"
intervallum = "1.3.0"
itertools = "0.9.0"
itertools-num = "0.1.3"
libmath = "0.2.1"
log = "0.4.11"
once_cell = "1.4.1"
reactive-rs = "0.1.1"
regex = "1.4.1"
shrinkwraprs = "0.3.0"
simplelog = "0.8.0"
smol = "1.2.4"
smol-potat = "1.0.0"
strum = "0.19.3"
strum_macros = "0.19.3"
ta = "0.3.1"
thiserror = "1.0.21"
tui = { version = "0.12.0", default-features = false, features = ['crossterm'] }
typenum = "1.12.0"
yahoo-finance = "0.3.0"

[patch.crates-io]
smol-potat = { git = "https://github.com/wusyong/smol-potat" }
