[package]
name = "stocker"
version = "0.2.0"
authors = ["Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2018"
description = "Stocks dashboard"
readme = "README.md"
repository = "https://github.com/teohhanhui/stocker"
license = "MIT OR Apache-2.0"
keywords = ["finance", "stocks", "dashboard"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
anyhow = "1.0.37"
argh = "0.1.4"
async-compat = "0.1.4"
async-std = { version = "1.9.0", features = [ "unstable" ] }
better-panic = "0.2.0"
bimap = "0.6.0"
chrono = "0.4.17"
crossterm = { version = "0.19.0", features = ["event-stream"] }
derivative = "2.2.0"
derive-new = "0.5.9"
derive_more = "0.99.11"
futures = "0.3.12"
gcollections = "1.4.0"
im = "15.0.0"
intervallum = "1.3.0"
itertools = "0.10.0"
itertools-num = "0.1.3"
libmath = "0.2.1"
log = "0.4.14"
once_cell = "1.5.2"
reactive-rs = "0.1.1"
regex = "1.4.3"
shrinkwraprs = "0.3.0"
simplelog = "0.9.0"
smol = "1.2.4"
smol-potat = "1.1.2"
strum = "0.20.0"
strum_macros = "0.20.1"
ta = "0.4.0"
thiserror = "1.0.23"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
typenum = "1.12.0"
yahoo-finance = "0.3.0"
